--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>Hannah English - Learning English through Bible Stories</title>
+  <title>Hannah English - Learn English Through Bible Stories</title>
 
   <!-- FAVICONS -->
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
@@ -275,6 +275,44 @@
       text-align:center;
       line-height:1.4;
     }
+
+    /* ====== TÍTULO + SUBTÍTULO RESPONSIVOS ====== */
+    .logo-title{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      gap:4px;
+      text-align:center;
+    }
+
+    .logo-title .logo{
+      max-width:220px;
+      height:auto;
+    }
+
+    .logo-title .main-title{
+      font-size:clamp(26px, 5vw, 42px);
+      line-height:1.1;
+      margin:10px 0 2px 0;
+    }
+
+    .logo-title .main-subtitle{
+      font-size:clamp(14px, 3.4vw, 22px);
+      font-weight:500;
+      margin:0;
+      color:#333;
+    }
+
+    @media (max-width:480px){
+      .logo-title .main-title{
+        font-size:clamp(22px, 6vw, 30px);
+        line-height:1.12;
+      }
+      .logo-title .main-subtitle{
+        font-size:clamp(13px, 4vw, 18px);
+      }
+    }
   </style>
 </head>
 
@@ -290,7 +328,8 @@
 
       <div class="logo-title">
         <img src="imagens/hannah_logo.png" class="logo" alt="Hannah English Logo"/>
-        <h1>Hannah English<br>Learning English through Bible Stories</h1>
+        <h1 class="main-title">Hannah English</h1>
+        <h2 class="main-subtitle">Learn English Through Bible Stories</h2>
       </div>
     </header>
 
@@ -348,7 +387,7 @@
     <br>
     <span style="font-size:14px;">
       Para instalar o app, clique no ícone 
-      <img src="imagens/share-icon.png" height="22" style="vertical-align:middle;">
+      <img src="imagens/share-icon.png" height="22" style="vertical-align:middle%;">
       ou toque no botão <strong>Compartilhar</strong> e depois em “Adicionar à Tela de Início”.
     </span>
     <button id="iosBannerClose">OK</button>
@@ -470,7 +509,7 @@ window.addEventListener("offline",updateNetworkStatus);
 const robotAudio=document.getElementById("robotAudio");
 const roboImage=document.getElementById("roboImage");
 
-/* SUGESTÃO PARA SINCRONIZAR: pré-carregar o GIF antes da primeira vez */
+/* Pré-carregar o GIF para sincronizar animação + fala já na primeira vez */
 let roboGifLoaded=false;
 (function preloadRoboGif(){
   const img = new Image();
@@ -481,9 +520,8 @@ let roboGifLoaded=false;
 function playRobotAudio(){
   if(!robotAudio) return;
   try{
-    // garante que o GIF já foi carregado e troca a imagem logo
+    // troca a imagem imediatamente; GIF já deve estar em cache
     roboImage.src="imagens/robo_fala.gif";
-
     robotAudio.currentTime=0;
     robotAudio.play().catch(err=>console.error("Erro ao tocar áudio:",err));
   }catch(e){
@@ -493,7 +531,6 @@ function playRobotAudio(){
 
 if(robotAudio){
   robotAudio.addEventListener("play",()=>{
-    // reforça a troca (caso algum navegador atrase)
     roboImage.src="imagens/robo_fala.gif";
   });
   robotAudio.addEventListener("ended",()=>{
