--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
       margin-top:40px;
       font-size:24px;
       font-weight:bold;
-      color:#333;
+      color:#1a5f34;              /* verde para combinar com a marca */
       text-align:center;
+      text-shadow:0 2px 3px rgba(0,0,0,0.25);
     }
 
     .levels{
@@ -292,25 +293,32 @@
     }
 
     .logo-title .main-title{
-      font-size:clamp(26px, 5vw, 42px);
+      color:#1a5f34;
+      font-weight:800;
+      font-size:clamp(30px, 7vw, 52px);           /* maior em todas as telas */
       line-height:1.1;
       margin:10px 0 2px 0;
+      text-shadow:0 3px 4px rgba(0,0,0,0.38);      /* sombra para leitura */
     }
 
     .logo-title .main-subtitle{
-      font-size:clamp(14px, 3.4vw, 22px);
-      font-weight:500;
+      color:#1a5f34;                                /* agora verde também */
+      font-weight:600;
+      font-size:clamp(18px, 3.5vw, 26px);          /* um pouco menor que o título */
       margin:0;
-      color:#333;
+      text-shadow:0 2px 3px rgba(0,0,0,0.3);
     }
 
+    /* Ajustes para telas pequenas: título e subtítulo ainda legíveis, mas sem exagero */
     @media (max-width:480px){
       .logo-title .main-title{
-        font-size:clamp(22px, 6vw, 30px);
-        line-height:1.12;
+        font-size:clamp(30px, 8vw, 40px);
       }
       .logo-title .main-subtitle{
-        font-size:clamp(13px, 4vw, 18px);
+        font-size:clamp(17px, 4.6vw, 22px);
+      }
+      .subtitle{
+        font-size:18px;  /* diminui "Choose your level..." só no celular */
       }
     }
   </style>
@@ -343,7 +351,7 @@
     <audio id="robotAudio" src="imagens/falarobopaginicial.mp3" preload="auto"></audio>
 
     <main>
-      <h2 class="subtitle" id="subtitleLoggedOut">Login and Start Learning English While Playing</h2>
+      <h2 class="subtitle" id="subtitleLoggedOut">Choose your level and Start Learning English While Playing</h2>
       <h2 class="subtitle" id="subtitleLoggedIn" style="display:none;">
         Choose your level and Start Learning English While Playing
       </h2>
@@ -387,7 +395,7 @@
     <br>
     <span style="font-size:14px;">
       Para instalar o app, clique no ícone 
-      <img src="imagens/share-icon.png" height="22" style="vertical-align:middle%;">
+      <img src="imagens/share-icon.png" height="22" style="vertical-align:middle;">
       ou toque no botão <strong>Compartilhar</strong> e depois em “Adicionar à Tela de Início”.
     </span>
     <button id="iosBannerClose">OK</button>
