--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       margin-top:40px;
       font-size:24px;
       font-weight:bold;
-      color:#1a5f34;              /* verde para combinar com a marca */
+      color:#1a5f34;              /* verde da marca */
       text-align:center;
       text-shadow:0 2px 3px rgba(0,0,0,0.25);
     }
@@ -293,23 +293,23 @@
     }
 
     .logo-title .main-title{
-      color:#1a5f34;
+      color:#1a5f34;                 /* verde da marca */
       font-weight:800;
-      font-size:clamp(30px, 7vw, 52px);           /* maior em todas as telas */
+      font-size:clamp(30px, 7vw, 52px);
       line-height:1.1;
       margin:10px 0 2px 0;
-      text-shadow:0 3px 4px rgba(0,0,0,0.38);      /* sombra para leitura */
+      text-shadow:none !important;   /* sem sombra para não escurecer */
     }
 
     .logo-title .main-subtitle{
-      color:#1a5f34;                                /* agora verde também */
+      color:#1a5f34;                 /* mesmo verde, um pouco menor */
       font-weight:600;
-      font-size:clamp(18px, 3.5vw, 26px);          /* um pouco menor que o título */
+      font-size:clamp(18px, 3.5vw, 26px);
       margin:0;
-      text-shadow:0 2px 3px rgba(0,0,0,0.3);
+      text-shadow:none !important;   /* sem sombra também */
     }
 
-    /* Ajustes para telas pequenas: título e subtítulo ainda legíveis, mas sem exagero */
+    /* Ajustes para telas pequenas */
     @media (max-width:480px){
       .logo-title .main-title{
         font-size:clamp(30px, 8vw, 40px);
