--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       margin-top:40px;
       font-size:24px;
       font-weight:bold;
-      color:#1a5f34;              /* verde da marca */
+      color:#1a5f34;              /* verde da marca (como estava na versão nova) */
       text-align:center;
       text-shadow:0 2px 3px rgba(0,0,0,0.25);
     }
@@ -112,6 +112,8 @@
       overflow:hidden;
       text-overflow:ellipsis;
       white-space:nowrap;
+      text-shadow: 0 1px 1px rgba(255,255,255,0.45),
+                   0 1px 2px rgba(0,0,0,0.18);
     }
 
     .dropdown{
@@ -292,21 +294,24 @@
       height:auto;
     }
 
+    /* Aqui eu aplico a “cara Hannah” usando o mesmo estilo da user-name */
     .logo-title .main-title{
-      color:#1a5f34;                 /* verde da marca */
       font-weight:800;
       font-size:clamp(30px, 7vw, 52px);
       line-height:1.1;
       margin:10px 0 2px 0;
-      text-shadow:none !important;   /* sem sombra para não escurecer */
+      color:#1a5f34;
+      text-shadow: 0 1px 1px rgba(255,255,255,0.45),
+                   0 1px 2px rgba(0,0,0,0.18);
     }
 
     .logo-title .main-subtitle{
-      color:#1a5f34;                 /* mesmo verde, um pouco menor */
       font-weight:600;
       font-size:clamp(18px, 3.5vw, 26px);
       margin:0;
-      text-shadow:none !important;   /* sem sombra também */
+      color:#1a5f34;
+      text-shadow: 0 1px 1px rgba(255,255,255,0.45),
+                   0 1px 2px rgba(0,0,0,0.18);
     }
 
     /* Ajustes para telas pequenas */
