--- a/index.html
+++ b/index.html
@@ -50,15 +50,7 @@
 
     .container img{ max-width:100%; height:auto; }
 
-    .subtitle{
-      margin-top:40px;
-      font-size:24px;
-      font-weight:bold;
-      color:#1a5f34;              /* verde da marca (como estava na versão nova) */
-      text-align:center;
-      text-shadow:0 2px 3px rgba(0,0,0,0.25);
-    }
-
+    /* NÃO vamos mexer em cor/sombra aqui para não brigar com styles.css */
     .levels{
       display:flex;
       flex-wrap:wrap;
@@ -294,24 +286,24 @@
       height:auto;
     }
 
-    /* Aqui eu aplico a “cara Hannah” usando o mesmo estilo da user-name */
+    /* Importante: NÃO redefino cor/sombra aqui,
+       para deixar o header h1 do styles.css mandar na cor e sombra do título */
     .logo-title .main-title{
       font-weight:800;
       font-size:clamp(30px, 7vw, 52px);
       line-height:1.1;
       margin:10px 0 2px 0;
-      color:#1a5f34;
-      text-shadow: 0 1px 1px rgba(255,255,255,0.45),
-                   0 1px 2px rgba(0,0,0,0.18);
+      /* color e text-shadow vêm de header h1 (CSS externo) */
     }
 
+    /* Subtítulo: mesma cor e sombra do título, só menor */
     .logo-title .main-subtitle{
       font-weight:600;
       font-size:clamp(18px, 3.5vw, 26px);
       margin:0;
-      color:#1a5f34;
-      text-shadow: 0 1px 1px rgba(255,255,255,0.45),
-                   0 1px 2px rgba(0,0,0,0.18);
+      color:#4CAF50;
+      text-shadow:2px 2px #888;
+      font-family:Arial, sans-serif;
     }
 
     /* Ajustes para telas pequenas */
@@ -322,8 +314,10 @@
       .logo-title .main-subtitle{
         font-size:clamp(17px, 4.6vw, 22px);
       }
+      /* Aqui eu só diminuo o subtítulo "Choose your level..." no celular,
+         a cor continua vindo do styles.css (#4CAF50) */
       .subtitle{
-        font-size:18px;  /* diminui "Choose your level..." só no celular */
+        font-size:18px !important;
       }
     }
   </style>
@@ -341,7 +335,9 @@
 
       <div class="logo-title">
         <img src="imagens/hannah_logo.png" class="logo" alt="Hannah English Logo"/>
+        <!-- Título: recebe estilo de header h1 em CSS/styles.css -->
         <h1 class="main-title">Hannah English</h1>
+        <!-- Subtítulo: mesmo verde e sombra, só menor -->
         <h2 class="main-subtitle">Learn English Through Bible Stories</h2>
       </div>
     </header>
