--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
 
     .container img{ max-width:100%; height:auto; }
 
-    /* NÃO vamos mexer em cor/sombra aqui para não brigar com styles.css */
+    /* subtítulos “Login / Choose your level…” */
+    .subtitle{
+      margin-top:32px;
+      font-size:20px;                 /* menor no desktop, não rouba o foco do título */
+      font-weight:bold;
+      color:#4CAF50;                   /* mesmo verde da marca */
+      text-align:center;
+      text-shadow:2px 2px #888;
+    }
+
     .levels{
       display:flex;
       flex-wrap:wrap;
@@ -286,17 +295,15 @@
       height:auto;
     }
 
-    /* Importante: NÃO redefino cor/sombra aqui,
-       para deixar o header h1 do styles.css mandar na cor e sombra do título */
+    /* Título: quem define cor/sombra é header h1 em CSS/styles.css */
     .logo-title .main-title{
       font-weight:800;
       font-size:clamp(30px, 7vw, 52px);
       line-height:1.1;
       margin:10px 0 2px 0;
-      /* color e text-shadow vêm de header h1 (CSS externo) */
     }
 
-    /* Subtítulo: mesma cor e sombra do título, só menor */
+    /* Subtítulo: mesmo verde e sombra do título, só um pouco menor */
     .logo-title .main-subtitle{
       font-weight:600;
       font-size:clamp(18px, 3.5vw, 26px);
@@ -313,11 +320,13 @@
       }
       .logo-title .main-subtitle{
         font-size:clamp(17px, 4.6vw, 22px);
+        text-shadow:none;           /* remove sombra no subtítulo — mais legível no celular */
+        margin-top:2px;
       }
-      /* Aqui eu só diminuo o subtítulo "Choose your level..." no celular,
-         a cor continua vindo do styles.css (#4CAF50) */
       .subtitle{
-        font-size:18px !important;
+        font-size:17px !important;  /* menor no mobile */
+        text-shadow:none;           /* subtítulo de baixo também mais limpo */
+        margin-top:24px;
       }
     }
   </style>
@@ -337,7 +346,7 @@
         <img src="imagens/hannah_logo.png" class="logo" alt="Hannah English Logo"/>
         <!-- Título: recebe estilo de header h1 em CSS/styles.css -->
         <h1 class="main-title">Hannah English</h1>
-        <!-- Subtítulo: mesmo verde e sombra, só menor -->
+        <!-- Subtítulo: mesmo verde, menor -->
         <h2 class="main-subtitle">Learn English Through Bible Stories</h2>
       </div>
     </header>
@@ -352,7 +361,9 @@
     <audio id="robotAudio" src="imagens/falarobopaginicial.mp3" preload="auto"></audio>
 
     <main>
-      <h2 class="subtitle" id="subtitleLoggedOut">Choose your level and Start Learning English While Playing</h2>
+      <h2 class="subtitle" id="subtitleLoggedOut">
+        Choose your level and Start Learning English While Playing
+      </h2>
       <h2 class="subtitle" id="subtitleLoggedIn" style="display:none;">
         Choose your level and Start Learning English While Playing
       </h2>
@@ -529,7 +540,6 @@ let roboGifLoaded=false;
 function playRobotAudio(){
   if(!robotAudio) return;
   try{
-    // troca a imagem imediatamente; GIF já deve estar em cache
     roboImage.src="imagens/robo_fala.gif";
     robotAudio.currentTime=0;
     robotAudio.play().catch(err=>console.error("Erro ao tocar áudio:",err));
@@ -842,7 +852,7 @@ document.addEventListener("DOMContentLoaded",()=>{
     location.href="https://hannahenglishcourse.netlify.app/game.html";
   };
 
-  /* Clique no título para rolar para o topo */
+  /* Clique no subtítulo para rolar para o topo */
   document.getElementById("subtitleLoggedOut").onclick = () => {
     window.scrollTo({top:0,behavior:"smooth"});
   };
