--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     /* subtítulos “Login / Choose your level…” */
     .subtitle{
       margin-top:32px;
-      font-size:20px;                 /* menor no desktop, não rouba o foco do título */
+      font-size:20px;                 
       font-weight:bold;
-      color:#4CAF50;                   /* mesmo verde da marca */
+      color:#4CAF50;
       text-align:center;
-      text-shadow:2px 2px #888;
+      text-shadow:none !important;   /* <<< sem sombra, em qualquer tela */
     }
 
     .levels{
@@ -295,7 +295,7 @@
       height:auto;
     }
 
-    /* Título: quem define cor/sombra é header h1 em CSS/styles.css */
+    /* Título: continua usando as regras de header h1 do styles.css (cor + sombra) */
     .logo-title .main-title{
       font-weight:800;
       font-size:clamp(30px, 7vw, 52px);
@@ -303,13 +303,13 @@
       margin:10px 0 2px 0;
     }
 
-    /* Subtítulo: mesmo verde e sombra do título, só um pouco menor */
+    /* Subtítulo: mesma cor verde, SEM sombra */
     .logo-title .main-subtitle{
       font-weight:600;
       font-size:clamp(18px, 3.5vw, 26px);
       margin:0;
       color:#4CAF50;
-      text-shadow:2px 2px #888;
+      text-shadow:none !important;    /* <<< sem sombra em qualquer tela */
       font-family:Arial, sans-serif;
     }
 
@@ -320,12 +320,12 @@
       }
       .logo-title .main-subtitle{
         font-size:clamp(17px, 4.6vw, 22px);
-        text-shadow:none;           /* remove sombra no subtítulo — mais legível no celular */
+        text-shadow:none !important;  /* garante sem sombra no mobile */
         margin-top:2px;
       }
       .subtitle{
-        font-size:17px !important;  /* menor no mobile */
-        text-shadow:none;           /* subtítulo de baixo também mais limpo */
+        font-size:17px !important;  
+        text-shadow:none !important;  /* sem sombra também aqui no mobile */
         margin-top:24px;
       }
     }
@@ -344,9 +344,9 @@
 
       <div class="logo-title">
         <img src="imagens/hannah_logo.png" class="logo" alt="Hannah English Logo"/>
-        <!-- Título: recebe estilo de header h1 em CSS/styles.css -->
+        <!-- Título: usa header h1 do styles.css (cor + sombra) -->
         <h1 class="main-title">Hannah English</h1>
-        <!-- Subtítulo: mesmo verde, menor -->
+        <!-- Subtítulo: verde, sem sombra -->
         <h2 class="main-subtitle">Learn English Through Bible Stories</h2>
       </div>
     </header>
@@ -401,12 +401,12 @@
 
   <!-- Banner iOS -->
   <div id="iosInstallBanner">
-    To install HannahEnglish.app, tap the 
+    To install HannahEnglish on your device, tap the 
     <img src="imagens/share-icon.png" height="22" style="vertical-align:middle;">
     Share button and choose “Add to Home Screen”.
     <br>
     <span style="font-size:14px;">
-      Para instalar HannahEnglish.app, clique no ícone 
+      Para instalar o HannahEnglish no seu dispositivo, clique no ícone 
       <img src="imagens/share-icon.png" height="22" style="vertical-align:middle;">
       ou toque no botão <strong>Compartilhar</strong> e depois em “Adicionar à Tela de Início”.
     </span>
