--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       font-weight:bold;
       color:#4CAF50;
       text-align:center;
-      text-shadow:none !important;   /* <<< sem sombra, em qualquer tela */
+      text-shadow:none !important;   /* sem sombra, em qualquer tela */
     }
 
     .levels{
@@ -309,7 +309,7 @@
       font-size:clamp(18px, 3.5vw, 26px);
       margin:0;
       color:#4CAF50;
-      text-shadow:none !important;    /* <<< sem sombra em qualquer tela */
+      text-shadow:none !important;    /* sem sombra */
       font-family:Arial, sans-serif;
     }
 
@@ -320,12 +320,12 @@
       }
       .logo-title .main-subtitle{
         font-size:clamp(17px, 4.6vw, 22px);
-        text-shadow:none !important;  /* garante sem sombra no mobile */
+        text-shadow:none !important;
         margin-top:2px;
       }
       .subtitle{
         font-size:17px !important;  
-        text-shadow:none !important;  /* sem sombra também aqui no mobile */
+        text-shadow:none !important;
         margin-top:24px;
       }
     }
@@ -361,8 +361,9 @@
     <audio id="robotAudio" src="imagens/falarobopaginicial.mp3" preload="auto"></audio>
 
     <main>
+      <!-- DESLOGADO: volta texto de login -->
       <h2 class="subtitle" id="subtitleLoggedOut">
-        Choose your level and Start Learning English While Playing
+        Login and Start Learning English While Playing
       </h2>
       <h2 class="subtitle" id="subtitleLoggedIn" style="display:none;">
         Choose your level and Start Learning English While Playing
@@ -422,7 +423,8 @@ var firebaseConfig={
   projectId:"hannahenglishcourse",
   storageBucket:"hannahenglishcourse.appspot.com",
   messagingSenderId:"449818788486",
-  appId:"1:449818788486:web:8a49d3f68591e6fb3f0707"
+  appId:"1:449818788486:web:8a49d3f68591e6fb3f0707",
+  measurementId:"G-07VVJG9LRS"
 };
 if(!firebase.apps.length){
   firebase.initializeApp(firebaseConfig);
@@ -852,7 +854,7 @@ document.addEventListener("DOMContentLoaded",()=>{
     location.href="https://hannahenglishcourse.netlify.app/game.html";
   };
 
-  /* Clique no subtítulo para rolar para o topo */
+  /* Clique no subtítulo para rolar para o topo (quando deslogado) */
   document.getElementById("subtitleLoggedOut").onclick = () => {
     window.scrollTo({top:0,behavior:"smooth"});
   };
