--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -65,41 +65,143 @@
     .dropdown-item { padding: 10px 16px; color: #333; text-decoration: none; font-size: 14px; }
     .dropdown-item:hover { background-color: #f0f0f0; }
 
-    /* ====== Layout ====== */
+    /* ====== Layout geral ====== */
     .map-container {
-      width: 100%; position: relative; background-image: url('../../imagens/fundo.png');
-      background-repeat: repeat; background-size: 200%; overflow-y: auto;
-      display: flex; flex-direction: column; align-items: center;
+      width: 100%;
+      position: relative;
+      background-image: url('../../imagens/fundo.png');
+      background-repeat: repeat;
+      background-size: 200%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
-    header { width: 100%; padding: 0; text-align: center; background: none; }
-    .title-container { text-align: center; margin-top: 28px; position: relative; z-index: 2; }
-    .title-container h1 { font-size: 2.5em; color: #4CAF50; font-family: Arial, sans-serif; margin: 0; text-shadow: 1px 1px 2px #000000; }
 
-    /* Grade */
+    header {
+      width: 100%;
+      padding: 0;
+      text-align: center;
+      background: none;
+    }
+
+    .title-container {
+      text-align: center;
+      margin-top: 28px;
+      margin-bottom: 8px;
+      position: relative;
+      z-index: 2;
+    }
+
+    .title-container h1 {
+      font-size: 2em;
+      color: #4CAF50;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      text-shadow: 1px 1px 2px #000000;
+    }
+
+    /* ====== Teacher Resources fora do mapa principal ====== */
+    .teacher-strip {
+      width: 100%;
+      max-width: 1080px;
+      display: flex;
+      justify-content: flex-start;
+      padding: 10px 16px 0;
+      box-sizing: border-box;
+    }
+
+    .teacher-strip a.teacher-resources {
+      display: none; /* será liberado por role */
+      background: #ffffff;
+      border-radius: 12px;
+      border: 2px solid #4CAF50;
+      padding: 6px 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      text-decoration: none;
+    }
+
+    .teacher-strip a.teacher-resources img {
+      height: 52px;
+      width: auto;
+      display: block;
+    }
+
+    /* ====== TABULEIRO DO MAPA ====== */
     .activity-buttons {
-      display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px;
-      max-width: 800px; width: 100%; justify-content: center; align-items: start;
-      padding: 16px 20px 40px; box-sizing: border-box;
+      position: relative;
+      width: 100%;
+      max-width: 1080px;
+      margin: 0 auto;
+      /* mapa em formato 1080x2880 */
+      background-image: url('../../imagens/map.png');
+      background-repeat: no-repeat;
+      background-position: top center;
+      background-size: 100% auto;
+      /* altura proporcional à largura */
+      height: calc(100vw * 2.6667); /* 2880/1080 */
+      max-height: 2880px;
+      overflow: visible;
     }
-    .activity-button, .teacher-resources, .robot-lex, .hannah-video {
-      display: flex; justify-content: center; align-items: center;
-      padding: 15px; background-color: #FFFFFF; border: 2px solid #4CAF50;
-      border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease; text-decoration: none;
-    }
-    .activity-button img, .teacher-resources img, .robot-lex img, .hannah-video img { width: 100%; height: auto; max-width: 130px; }
-    .activity-button:hover, .teacher-resources:hover, .robot-lex:hover, .hannah-video:hover { transform: scale(1.05); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
-    .teacher-resources, .robot-lex, .hannah-video { grid-column: span 2; }
-    @media (max-width: 400px) { .teacher-resources, .robot-lex, .hannah-video { grid-column: span 1; } }
 
-    #linesSvg{ position: absolute; inset: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; display: block; }
+    @media (min-width: 1080px) {
+      .activity-buttons {
+        height: 2880px;
+      }
+    }
+
+    /* Botões do mapa */
+    .map-btn,
+    .activity-button,
+    .robot-lex,
+    .hannah-video {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+    }
+
+    .map-btn img,
+    .activity-button img,
+    .robot-lex img,
+    .hannah-video img {
+      width: 26vw;
+      max-width: 230px;
+      height: auto;
+    }
+
+    @media (min-width: 1080px) {
+      .map-btn img,
+      .activity-button img,
+      .robot-lex img,
+      .hannah-video img {
+        width: 220px;
+      }
+    }
+
+    /* Posições em porcentagem (baseado em 1080x2880) */
+    .map-pos-1 { left: 20%; top: 10.42%; }  /* linha 1 coluna 1 */
+    .map-pos-2 { left: 50%; top: 20.83%; }  /* linha 2 coluna 2 */
+    .map-pos-3 { left: 80%; top: 31.25%; }  /* linha 3 coluna 3 */
+    .map-pos-4 { left: 50%; top: 41.67%; }  /* linha 4 coluna 2 */
+    .map-pos-5 { left: 20%; top: 52.08%; }  /* linha 5 coluna 1 */
+    .map-pos-6 { left: 50%; top: 62.50%; }  /* linha 6 coluna 2 */
+    .map-pos-7 { left: 80%; top: 72.92%; }  /* linha 7 coluna 3 */
+    .map-pos-8 { left: 50%; top: 83.33%; }  /* linha 8 coluna 2 */
+    .map-pos-9 { left: 20%; top: 93.75%; }  /* linha 9 coluna 1 */
 
     /* ====== DESABILITADO ====== */
     .disabled-btn {
-      filter: grayscale(100%); opacity: 0.55; pointer-events: none; cursor: not-allowed;
-      border-color: #999 !important; box-shadow: none !important; transform: none !important;
+      filter: grayscale(100%);
+      opacity: 0.55;
+      pointer-events: none;
+      cursor: not-allowed;
     }
-    .disabled-btn img { filter: grayscale(100%); }
+
+    .disabled-btn img {
+      filter: grayscale(100%);
+    }
   </style>
 </head>
 
@@ -118,58 +220,60 @@
       <div class="title-container"><h1>Select an Activity</h1></div>
     </header>
 
+    <!-- Teacher Resources (fora do caminho principal) -->
+    <div class="teacher-strip">
+      <a href="teacher/index.html" class="teacher-resources">
+        <img src="../../imagens/resources.png" alt="Teacher Resources">
+      </a>
+    </div>
+
     <main>
+      <!-- Tabuleiro com o map.png de fundo -->
       <div class="activity-buttons" id="activity-buttons">
-        <!-- Teacher Resources (controlado por role) -->
-        <a href="teacher/index.html" class="teacher-resources" style="display:none;">
-          <img src="../../imagens/resources.png" alt="Teacher Resources">
-        </a>
+        <!-- Botões serão inseridos via JS com as classes de posição -->
       </div>
     </main>
-
-    <svg id="linesSvg" xmlns="http://www.w3.org/2000/svg"></svg>
   </div>
 
   <script>
-  /* ==========
-     CONFIG AJUSTÁVEL – caminhos dos dashboards
-  ========== */
+  /* ========== CONFIG DASHBOARDS ========== */
   const DASHBOARD_PATH = {
     aluno: "../../painel_aluno.html",
     professor: "../../painel_professor.html",
-    proprietario: "../../painel_professor.html" // proprietario usa o dashboard do professor
+    proprietario: "../../painel_professor.html"
   };
 
-  /* ==========
-     Level/Unit da URL (+ normalização para DB)
-  ========== */
+  /* ========== Level/Unit da URL (+ normalização) ========== */
   const __pathParts = window.location.pathname.split("/");
   const __level = __pathParts[1] || "Level1";
   const __unit  = __pathParts[2] || "Unit1";
-  const normLU = s => s.replace(/^level(\d+)$/i, 'Level$1').replace(/^unit(\d+)$/i, 'Unit$1');
+  const normLU = s => s.replace(/^level(\d+)$/i, 'Level$1')
+                       .replace(/^unit(\d+)$/i, 'Unit$1');
   const __levelDB = normLU(__level);
   const __unitDB  = normLU(__unit);
 
-  /* ==========
-     Helpers: criação e (des)bloqueio
-  ========== */
-  function createGatedLink({ href, className, imgSrc, imgAlt, requiresPhase }) {
+  /* ========== Helpers: criação e (des)bloqueio ========== */
+  function createGatedLink({ href, className, imgSrc, imgAlt, requiresPhase, posClass }) {
     const a = document.createElement("a");
-    a.className = className + " disabled-btn";
+    a.className = (className || "") + " map-btn disabled-btn " + (posClass || "");
     a.dataset.href = href;
     if (requiresPhase) a.dataset.requiresPhase = String(requiresPhase);
     const img = document.createElement("img");
     img.src = imgSrc; img.alt = imgAlt;
     a.appendChild(img);
-    return a; // sem href
+    return a;
   }
+
   function markDisabled(anchorEl, requiredPhase) {
     if (!anchorEl) return;
     anchorEl.classList.add("disabled-btn");
     anchorEl.removeAttribute("href");
     anchorEl.setAttribute("aria-disabled", "true");
-    anchorEl.title = requiredPhase ? `Liberado após concluir a fase ${requiredPhase}.` : `Indisponível.`;
+    if (requiredPhase) {
+      anchorEl.title = `Unlocked after completing phase ${requiredPhase}.`;
+    }
   }
+
   function markEnabled(anchorEl) {
     if (!anchorEl) return;
     const dh = anchorEl.dataset.href;
@@ -179,32 +283,37 @@
     anchorEl.removeAttribute("title");
   }
 
-  /* ==========
-     Construção dos botões (abre travado exceto os livres)
-  ========== */
+  /* ========== Construção dos botões no mapa ========== */
   document.addEventListener("DOMContentLoaded", () => {
     const container = document.getElementById("activity-buttons");
+    if (!container) return;
 
-    // Hannah Video (sempre livre)
+    /* 1) Hannah Video – sempre liberado (map-pos-2) */
     const hannahVideo = document.createElement("a");
     hannahVideo.href = `/Atividades/HannahVideo/index.html?level=${__level}&unit=${__unit}`;
-    hannahVideo.className = "activity-button hannah-video";
+    hannahVideo.className = "hannah-video map-btn map-pos-2";
+    hannahVideo.dataset.href = hannahVideo.href;
     const hvImg = document.createElement("img");
     hvImg.src = "../../imagens/botoes/video_button.png";
     hvImg.alt = "Hannah Video";
     hannahVideo.appendChild(hvImg);
-    const teacherEl = container.querySelector(".teacher-resources");
-    if (teacherEl) teacherEl.insertAdjacentElement("afterend", hannahVideo);
-    else container.prepend(hannahVideo);
+    container.appendChild(hannahVideo);
 
-    // Trechos
+    /* 2) Demais trechos em ordem do mapa:
+       pos-3 -> trecho1
+       pos-4 -> trecho2
+       pos-5 -> trecho3
+       pos-6 -> trecho4
+       pos-7 -> trecho5
+       pos-8 -> trecho6
+    */
     const buttonData = [
-      { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Listening" },
-      { trecho: "trecho2", img: "../../imagens/grammar.png",   alt: "Grammar" , requiresPhase:  8 },
-      { trecho: "trecho3", img: "../../imagens/speaking.png",  alt: "Speaking", requiresPhase: 14 },
-      { trecho: "trecho4", img: "../../imagens/writing.png",   alt: "Writing" , requiresPhase: 20 },
-      { trecho: "trecho5", img: "../../imagens/Bible.png",     alt: "Bible"   , requiresPhase: 25 },
-      { trecho: "trecho6", img: "../../imagens/test.png",      alt: "Test"    , requiresPhase: 29 }
+      { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Story & Listening",  requiresPhase: null, posClass: "map-pos-3" },
+      { trecho: "trecho2", img: "../../imagens/grammar.png",   alt: "Grammar",            requiresPhase:  8,   posClass: "map-pos-4" },
+      { trecho: "trecho3", img: "../../imagens/speaking.png",  alt: "Words & Spelling",   requiresPhase: 14,   posClass: "map-pos-5" },
+      { trecho: "trecho4", img: "../../imagens/writing.png",   alt: "Speak It Clearly",   requiresPhase: 20,   posClass: "map-pos-6" },
+      { trecho: "trecho5", img: "../../imagens/Bible.png",     alt: "Real Conversation",  requiresPhase: 25,   posClass: "map-pos-7" },
+      { trecho: "trecho6", img: "../../imagens/test.png",      alt: "Final Challenge",    requiresPhase: 29,   posClass: "map-pos-8" }
     ];
 
     buttonData.forEach(data => {
@@ -212,7 +321,8 @@
       if (!data.requiresPhase) {
         const a = document.createElement("a");
         a.href = href;
-        a.className = "activity-button";
+        a.dataset.href = href;
+        a.className = "activity-button map-btn " + data.posClass;
         a.dataset.trecho = data.trecho;
         const img = document.createElement("img");
         img.src = data.img; img.alt = data.alt;
@@ -225,27 +335,27 @@
         className: "activity-button",
         imgSrc: data.img,
         imgAlt: data.alt,
-        requiresPhase: data.requiresPhase
+        requiresPhase: data.requiresPhase,
+        posClass: data.posClass
       });
       gated.dataset.trecho = data.trecho;
       container.appendChild(gated);
     });
 
-    // Robô Lex (requer 27)
+    /* 3) Robô Lex – última posição do mapa (map-pos-9), travado até fase 27 */
     const robotButton = createGatedLink({
       href: `../../Atividades/LEX/index.html?level=${__level}&unit=${__unit}`,
-      className: "activity-button robot-lex",
+      className: "robot-lex",
       imgSrc: "../../imagens/botoes/lex_button.png",
-      imgAlt: "Robot Lex",
-      requiresPhase: 27
+      imgAlt: "Robot Samuel",
+      requiresPhase: 27,
+      posClass: "map-pos-9"
     });
     robotButton.dataset.kind = "robotLex";
     container.appendChild(robotButton);
   });
 
-  /* ==========
-     Leitura do progresso (suporta chaves "fase8", etc.)
-  ========== */
+  /* ========== Leitura do progresso (suporta "fase8", etc.) ========== */
   async function getUnlockedInfo(userId, levelDB, unitDB) {
     const db = firebase.database();
     const candidatePaths = [
@@ -286,10 +396,7 @@
           lastUnlocked = Math.max(lastUnlocked ?? -Infinity, val.lastUnlocked);
         }
 
-        // fases como "fase8: true"
         absorbPhaseObject(val);
-
-        // sub-objetos comuns
         absorbPhaseObject(val.fasesLiberadas);
         absorbPhaseObject(val.liberadas);
         absorbPhaseObject(val.released);
@@ -318,7 +425,10 @@
     const container = document.getElementById("activity-buttons");
     if (!container) return;
 
-    const allAnchors = Array.from(container.querySelectorAll("a.activity-button, a.robot-lex, a.hannah-video"));
+    const allAnchors = Array.from(
+      container.querySelectorAll("a.activity-button, a.robot-lex, a.hannah-video")
+    );
+
     for (const a of allAnchors) {
       const trecho = a.dataset.trecho;
       const req    = a.dataset.requiresPhase;
@@ -337,16 +447,13 @@
     }
   }
 
-  /* ==========
-     Util: render do dropdown por role
-  ========== */
+  /* ========== Dropdown do usuário por role ========== */
   function renderDropdown(role) {
     const userDropdown = document.getElementById("userDropdown");
     if (!userDropdown) return;
 
-    // Decide rótulo + link do dashboard
     const isTeacher = (role === "professor" || role === "proprietario");
-    const dashLabel = isTeacher ? "📊 Dashboard do Professor" : "📊 Dashboard do Aluno";
+    const dashLabel = isTeacher ? "📊 Teacher Dashboard" : "📊 Student Dashboard";
     const dashHref  = isTeacher ? (DASHBOARD_PATH.professor) : (DASHBOARD_PATH.aluno);
 
     userDropdown.innerHTML = `
@@ -356,9 +463,7 @@
     `;
   }
 
-  /* ==========
-     Login + roles + gates + dropdown dinâmico
-  ========== */
+  /* ========== Login + roles + gates ========== */
   firebase.auth().onAuthStateChanged(async (user) => {
     const loginLink = document.getElementById("loginLink");
     const userDropdown = document.getElementById("userDropdown");
@@ -371,7 +476,6 @@
       const displayName = nome.length > 10 ? nome.slice(0, 10) + "…" : nome;
       const avatar = dados.avatar ? `../../imagens/${dados.avatar}` : "../../imagens/bonecologin1.png";
 
-      // Avatar + nome
       loginLink.innerHTML = "";
       loginLink.removeAttribute("href");
       const img = document.createElement("img");
@@ -380,16 +484,13 @@
       const p = document.createElement("p"); p.className = "user-name"; p.textContent = displayName;
       loginLink.append(img, p);
 
-      // Role
       const role = dados.role || null;
-
-      // Renderiza dropdown conforme role
       renderDropdown(role);
 
-      // Toggle dropdown
       loginLink.onclick = (e) => {
         e.preventDefault();
-        userDropdown.style.display = (userDropdown.style.display === "flex" ? "none" : "flex");
+        userDropdown.style.display =
+          (userDropdown.style.display === "flex" ? "none" : "flex");
       };
       window.addEventListener("click", (e) => {
         if (!loginLink.contains(e.target)) userDropdown.style.display = "none";
@@ -397,20 +498,21 @@
 
       // Teacher Resources + gates
       if (role === "professor" || role === "proprietario") {
-        const tr = document.querySelector(".teacher-resources");
-        if (tr) tr.style.display = "flex";
-        document.querySelectorAll(".activity-button, .robot-lex, .hannah-video").forEach(a => markEnabled(a));
+        const tr = document.querySelector(".teacher-strip .teacher-resources");
+        if (tr) tr.style.display = "block";
+        document
+          .querySelectorAll(".activity-button, .robot-lex, .hannah-video")
+          .forEach(a => markEnabled(a));
       } else if (role === "aluno") {
         try { await applyStudentGates(user.uid, __levelDB, __unitDB); }
         catch (e) { console.warn("Falha ao aplicar travas de aluno:", e?.message); }
       } else {
-        // Role desconhecido: libera apenas o que é sempre livre
-        document.querySelectorAll(".hannah-video, [data-trecho='trecho1']").forEach(a => markEnabled(a));
+        document
+          .querySelectorAll(".hannah-video, [data-trecho='trecho1']")
+          .forEach(a => markEnabled(a));
       }
 
     } else {
-      // Usuário não logado
-      const userDropdown = document.getElementById("userDropdown");
       if (userDropdown) {
         userDropdown.innerHTML = `
           <a href="../../index.html" class="dropdown-item">🔁 Select a New Level</a>
@@ -423,15 +525,15 @@
     }
   });
 
-  // Compat extra: exibe Teacher Resources se professor/proprietário
+  // Compat: garantir Teacher Resources para professor/proprietário
   firebase.auth().onAuthStateChanged((user) => {
     if (user) {
       const userRoleRef = firebase.database().ref(`/usuarios/${user.uid}/role`);
       userRoleRef.once("value").then((snapshot) => {
         const role = snapshot.val();
         if (role === "professor" || role === "proprietario") {
-          const tr = document.querySelector(".teacher-resources");
-          if (tr) tr.style.display = "flex";
+          const tr = document.querySelector(".teacher-strip .teacher-resources");
+          if (tr) tr.style.display = "block";
         }
       }).catch((error) => console.error("Erro ao obter role:", error));
     }
