--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -125,7 +125,7 @@
       pointer-events: none; /* os <a> internos recebem os eventos */
     }
 
-    /* Botões agora são apenas áreas clicáveis circulares sobre o mapa */
+    /* Botões agora são áreas clicáveis circulares sobre o mapa */
     .activity-button,
     .teacher-resources,
     .robot-lex,
@@ -135,7 +135,7 @@
       width: 13%;              /* diâmetro relativo ao width do mapa */
       aspect-ratio: 1 / 1;
       border-radius: 50%;
-      background-color: transparent;
+      background-color: rgba(255,255,255,0.0);
       border: 3px solid transparent;
       box-shadow: none;
       padding: 0;
@@ -143,14 +143,22 @@
       text-decoration: none;
       pointer-events: auto;    /* reativa clique nos links */
       transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease, background-color 0.2s ease;
+      position: absolute;
     }
 
-    /* Esconde as imagens internas – ícones estão desenhados no próprio mapa */
+    /* IMAGENS DENTRO DOS BOTÕES – AGORA VISÍVEIS */
     .activity-button img,
     .teacher-resources img,
     .robot-lex img,
     .hannah-video img {
-      display: none;
+      position: absolute;
+      inset: 10%;              /* margem interna para não “vazar” do círculo */
+      width: 80%;
+      height: 80%;
+      object-fit: contain;
+      border-radius: 50%;
+      pointer-events: none;    /* clique é sempre no <a> */
+      display: block;
     }
 
     .activity-button:hover,
