--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -98,9 +98,9 @@
     /* Área que contém o fundo map.png e os nós em zigue-zague */
     .map-inner {
       position: relative;
-      width: 100%;
-      max-width: 1080px;
-      margin: 8px auto 0;
+      width: 100vw;                 /* ocupa toda a largura da tela */
+      max-width: none;
+      margin: 8px 0 0;
       background-image: url('../../imagens/map.png');
       background-repeat: no-repeat;
       background-position: top center;
@@ -108,7 +108,7 @@
       aspect-ratio: 1080 / 2880;          /* mantém proporção do mapa */
       /* fallback aproximado para navegadores antigos */
       height: calc(100vw * (2880 / 1080));
-      max-height: calc(1080px * (2880 / 1080)); /* quando atingir largura máxima */
+      max-height: calc(100vw * (2880 / 1080));
     }
 
     /* Container invisível que segura os botões/click targets */
@@ -132,7 +132,7 @@
     .hannah-video {
       position: absolute;
       transform: translate(-50%, -50%);
-      width: 13%;              /* diâmetro relativo ao width do mapa */
+      width: 18%;              /* AUMENTADO para acompanhar o círculo azul */
       aspect-ratio: 1 / 1;
       border-radius: 50%;
       background-color: rgba(255,255,255,0.0);
@@ -143,18 +143,17 @@
       text-decoration: none;
       pointer-events: auto;    /* reativa clique nos links */
       transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease, background-color 0.2s ease;
-      position: absolute;
     }
 
-    /* IMAGENS DENTRO DOS BOTÕES – AGORA VISÍVEIS */
+    /* IMAGENS DENTRO DOS BOTÕES – AGORA MAIORES */
     .activity-button img,
     .teacher-resources img,
     .robot-lex img,
     .hannah-video img {
       position: absolute;
-      inset: 10%;              /* margem interna para não “vazar” do círculo */
-      width: 80%;
-      height: 80%;
+      inset: 5%;              /* menos margem interna, imagem mais cheia */
+      width: 90%;
+      height: 90%;
       object-fit: contain;
       border-radius: 50%;
       pointer-events: none;    /* clique é sempre no <a> */
